style.css
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

:root {
  --background-color: hsl(214, 34%, 84%);
  --card-bg: hsl(0, 0%, 100%);
  --text-light: hsl(0, 0%, 40%);
  --text-dark: hsl(0, 0%, 8%);
}

.container {
  width: 100%;
  min-height: 100vh;
  background-color: var(--background-color);
  display: flex;
  justify-content: center;
  align-items: center;
}

article {
  width: 350px;
  background-color: var(--card-bg);
  border-radius: 10px;
  box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.1);
  padding-block: 30px;
  font-family: "Lato", sans-serif;
}

article header {
  display: flex;
  gap: 1em;
  padding-inline: 30px;
}

article header img {
  width: 50px;
  height: 50px;
  border-radius: 50%;
}

article header .title {
  display: flex;
  flex-direction: column;
  gap: 0.25em;
}

article header .title .location {
  display: flex;
  align-items: center;
  gap: 0.5em;
}

.location img {
  width: 20px;
  height: 20px;
}

article header .title .location span {
  color: var(--text-light);
  font-size: 0.85rem;
}

ul li {
  list-style: none;
}

main {
  margin-top: 20px;
  padding-inline: 30px;
}

main .description {
  color: var(--text-light);
  font-size: 0.9rem;
  line-height: 1.5;
}

main .hobbies {
  margin-block: 1em;
}

main .hobbies h3,
main .dislikes h3 {
  color: var(--text-dark);
  font-size: 1.1rem;
  margin-bottom: 0.5em;
}

.hobbies ul,
.dislikes ul {
  display: flex;
  gap: 0.5em;
  flex-wrap: wrap;
  font-size: 0.9rem;
}

.hobbies ul li,
.dislikes ul li {
  padding: 0.3em 0.7em;
  /* background-color: hsl(283, 88%, 90%);
  color: hsl(283, 18%, 30%); */
  border-radius: 5px;
  display: inline-block;
}

.hobbies ul li:nth-child(1) {
  background-color: hsl(283, 88%, 90%);
  color: hsl(283, 18%, 30%);
}

.hobbies ul li:nth-child(2) {
  background-color: hsl(43, 100%, 90%);
  color: hsl(43, 60%, 30%);
}

.hobbies ul li:nth-child(3) {
  background-color: hsl(120, 100%, 90%);
  color: hsl(120, 10%, 30%);
}

.dislikes ul li {
  background-color: hsl(0, 100%, 80%);
  color: hsl(0, 100%, 20%);
}

footer {
  margin-top: 1.5em;
  display: flex;
  justify-content: space-between;
  align-items: center;
  border-top: 1px solid hsl(0, 0%, 90%);
  padding-top: 1em;
  padding-inline: 30px;
}

footer ul {
  display: flex;
  gap: 1em;
}

footer ul li a {
  text-decoration: none;
  padding: 0.5em;
  background-color: hsl(0, 0%, 90%);
  border-radius: 5px;
  font-size: 1.2rem;
}

.twitter,
.github {
  color: #000000;
}

.linkedIn {
  color: hsl(210, 90%, 20%);
  background-color: hsl(210, 90%, 90%);
}

.time-info {
  color: var(--text-light);
  font-size: 0.8rem;
}

